# spelltest.rs

./: Cargo.toml  README.md
.github/workflows/: crate-publish.yml
examples/basic/: main.rs
src/: lib.rs  main.rs
src/models/: attack.rs  character.rs  creature.rs  mod.rs
src/utils/: logger.rs
